--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .navbar-brand a {
@@ -22,15 +25,87 @@
   display: flex;
   gap: 1rem;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.navbar-links li a {
+.navbar-links li a,
+.navbar-links li button {
   text-decoration: none;
   color: #333;
   transition: color 0.3s;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0;
 }
 
-.navbar-links li a:hover {
+.navbar-links li a:hover,
+.navbar-links li button:hover {
   color: #e91e63;
+}
+
+.logout-button {
+  color: #e91e63;
+  font-weight: 600;
+}
+
+.donate-nav-btn {
+  background-color: #e91e63;
+  color: white !important;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.donate-nav-btn:hover {
+  background-color: #d41a5a;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+  .tw-navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links {
+    flex-direction: column;
+    width: 100%;
+    display: none; /* Hidden by default, will be toggled by JS */
+  }
+
+  .navbar-links.active {
+    display: flex;
+  }
+
+  .navbar-links li {
+    width: 100%;
+    text-align: center;
+    margin: 0.5rem 0;
+  }
+
+  .navbar-links li a,
+  .navbar-links li button {
+    display: block;
+    padding: 0.8rem 0;
+    border-bottom: 1px solid #eee;
+  }
+
+  .navbar-links li:last-child a,
+  .navbar-links li:last-child button {
+    border-bottom: none;
+  }
+
+  /* Hamburger icon - you'd need to add this in Navbar.jsx */
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+    font-size: 1.5rem;
+    position: absolute;
+    right: 2rem;
+    top: 1rem;
+  }
 }
 
